@@ -1,3 +1,7 @@
+2015-04-17  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* Makefile.am (EXTRA_DIST): Adapted.
+
 2015-04-17  Karl Berry  <karl@tug.org>
 
 	* contrib/PSTricks: remove this ancient copy of a PSTricks README.
